mobile: re-add nav menu

--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -10,9 +10,9 @@ const { class: className, ...rest } = Astro.props;
 <style>
   span {
     display: block;
-    position: absolute;
+    position: fixed;
     top: 2vw;
-    left: 2vw;
+    right: 2vw;
     background: var(--bg-color-2);
     border-radius: 4vw;
     height: 10vw;
