--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -34,6 +34,7 @@ const { class: className, ...rest } = Astro.props;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    background-color: var(--bg-color-1);
   }
 
   nav > * {
