--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,23 +1,20 @@
 ---
-import Hamburger from "./Hamburger.astro";
-import Navigation from "./Navigation.astro";
+import MobileNavigation from "./MobileNavigation.astro";
+import NavBar from "./NavBar.astro";
 ---
 
 <header>
-  <Hamburger class="hamburger"/>
-  <Navigation class="navbar"/>
+  <NavBar class="navbar" />
+  <MobileNavigation class="mobile-nav" />
 </header>
 
 <style>
   header {
-    position: sticky;
-    top: 0;
-    background-color: var(--bg-color-1);
-    z-index: 2;
+    display: unset;
   }
-
+  
   @media screen and (min-width: 636px) {
-    .hamburger {
+    .mobile-nav {
       display: none;
     }
   }
