style: center post images

--- a/src/components/BlogImage.astro
+++ b/src/components/BlogImage.astro
@@ -25,6 +25,7 @@ const className = bleed ? "full-bleed" : undefined;
 </div>
 <style>
   div {
+    margin: 2rem auto;
     text-align: center;
     color: var(--text-color-faded);
   }
