posts: set publication date locale

--- a/src/components/PostLink.astro
+++ b/src/components/PostLink.astro
@@ -26,7 +26,7 @@ if (post === undefined) {
   </p>
   <span>
     {
-      post.data.date.toLocaleDateString(undefined, {
+      post.data.date.toLocaleDateString("en-UK", {
         day: "numeric",
         month: "long",
         year: "numeric",
