--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -35,7 +35,7 @@ const readingTime = remarkPluginFrontmatter.readingTime;
   <p>
     Published on
     {
-      frontmatter.date.toLocaleDateString(undefined, {
+      frontmatter.date.toLocaleDateString("en-UK", {
         day: "numeric",
         month: "long",
         year: "numeric",
