style: remove some alternate background color

--- a/src/components/PostLinks.astro
+++ b/src/components/PostLinks.astro
@@ -21,5 +21,8 @@ interface Props {
 <style>
   ul {
     list-style: none;
+    margin-inline: auto;
+    padding: 0;
+    max-width: 90%;
   }
 </style>
