--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,13 @@ const latestPosts = posts.slice(0, 5);
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <h1>Iridescent's blog</h1>
-  Hi, I'm Iridescent, IT engineer and software developer. I am driven by curiosity
-  and the desire to understand how things work. Welcome to my blog!
-
   <h2>Latest posts:</h2>
   <PostLinks posts={latestPosts} />
 </BaseLayout>
+
+<style>
+  h2 {
+    text-align: center;
+    margin-block: 2.5em 1em;
+  }
+</style>
