--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,7 +51,7 @@ a {
 .external-link::after {
   content: "";
   mask-size: cover;
-  mask-image: url("/public/external-link.svg");
+  mask-image: url("/external-link.svg");
   width: 1em;
   height: 1em;
   margin-inline: 0.25em;
