style: set heading colour

--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -34,6 +34,14 @@ const fullToc: Headings = {
     list-style: none;
   }
 
+  ul#toc-root li a {
+    color: var(--text-color-faded);
+  }
+
+  ul#toc-root li a:hover {
+    color: var(--text-color-heading);
+  }
+
   ul {
     margin: 0;
     padding-left: 1ch;
