style: use fonts

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,9 @@
 ---
+import "@fontsource/ubuntu";
 import Header from "../components/Header.astro";
 import PreRender from "../components/PreRender.astro";
-import "../styles/reset.css";
 import "../styles/global.css";
+import "../styles/reset.css";
 
 interface Props {
   pageTitle: string;
