style: add theme term

--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -13,7 +13,7 @@ const { class: className, ...rest } = Astro.props;
     position: fixed;
     top: 2vw;
     right: 2vw;
-    background: var(--bg-color-2);
+    background: var(--text-color-faded);
     border-radius: 4vw;
     height: 10vw;
     width: 10vw;
