--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -57,8 +57,8 @@ const { class: className, ...rest } = Astro.props;
   }
 
   label {
-    cursor:pointer;
-    color: var(--text-color-link)
+    cursor: pointer;
+    color: var(--text-color-link);
   }
 
   html:has(#dark-mode-toggle:checked) label [data-icon="feather:sun"],
