--- a/src/components/TagLink.astro
+++ b/src/components/TagLink.astro
@@ -6,17 +6,19 @@ interface Props {
 const { tag } = Astro.props;
 ---
 
-<p class="tag">
+<p>
   <a href={`/tags/${tag}`}>{tag}</a>
 </p>
 
 <style>
-  .tag {
+  p {
     margin: 0.25em;
-    background-color: var(--bg-color-2);
     border-radius: 0.5em;
-    padding: 0.5em 1em;
     font-size: 1.15em;
     font-weight: bold;
+  }
+
+  a::before {
+    content: '#';
   }
 </style>
