style: refactor palette

--- a/src/components/BlogImage.astro
+++ b/src/components/BlogImage.astro
@@ -27,6 +27,6 @@ const className = bleed ? "full-bleed" : undefined;
   div {
     margin: 2rem auto;
     text-align: center;
-    color: var(--text-color-faded);
+    color: var(--color-faded);
   }
 </style>
