--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -13,7 +13,7 @@ const { class: className, ...rest } = Astro.props;
     position: fixed;
     top: 2vw;
     right: 2vw;
-    background: var(--text-color-faded);
+    background: var(--color-faded);
     border-radius: 4vw;
     height: 10vw;
     width: 10vw;
@@ -25,6 +25,6 @@ const { class: className, ...rest } = Astro.props;
     height: 5vw;
     width: 5vw;
     margin: 2.5vw auto;
-    color: var(--text-color-link);
+    color: var(--color-link);
   }
 </style>
