--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -36,7 +36,7 @@ const { class: className, ...rest } = Astro.props;
 
   .navbar-mobile {
     flex-direction: column;
-    background-color: color-mix(in srgb, var(--bg-color-1) 80%, transparent);
+    background-color: color-mix(in srgb, var(--color-bg) 80%, transparent);
   }
 
   #mobile-menu {
