--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -35,11 +35,11 @@ const fullToc: Headings = {
   }
 
   ul#toc-root li a {
-    color: var(--text-color-faded);
+    color: var(--color-faded);
   }
 
   ul#toc-root li a:hover {
-    color: var(--text-color-heading);
+    color: var(--color-heading);
   }
 
   ul {
