--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,7 +6,7 @@ const { class: className, ...rest } = Astro.props;
 
 <nav class={className} {...rest}>
   <a href="/">Iridescent dreams</a>
-  <a href="/blog/">Blog</a>
+  <a href="/posts/">Posts</a>
   <a href="/tags/">Tags</a>
   <a href="https://github.com/HugoBelotDeloro" aria-label="GitHub">
     <Icon name="feather:github" />
