--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,10 +7,9 @@ import "../styles/reset.css";
 
 interface Props {
   pageTitle: string;
-  disableMainElement?: boolean;
 }
 
-const { pageTitle, disableMainElement } = Astro.props;
+const { pageTitle } = Astro.props;
 
 const css_debug = false;
 ---
@@ -27,14 +26,24 @@ const css_debug = false;
   <body>
     <PreRender />
     <Header />
-    {
-      disableMainElement ? (
-        <slot />
-      ) : (
-        <main id="main">
-          <slot />
-        </main>
-      )
-    }
+    <main>
+      <slot />
+    </main>
   </body>
 </html>
+
+<style>
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+
+  main {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 60ch;
+    padding: 1rem;
+    flex-grow: 1;
+  }
+</style>
