--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,9 @@ import NavBar from "./NavBar.astro";
 
 <style>
   header {
-    display: unset;
+    position: sticky;
+    top: 0;
+    z-index: 2;
   }
 
   @media screen and (min-width: 636px) {
