--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -4,12 +4,4 @@ import Navigation from "./Navigation.astro";
 const { class: className, ...rest } = Astro.props;
 ---
 
-<Navigation class:list={["navigation", className]} {...rest} />
-
-<style>
-  .navigation {
-    position: sticky;
-    top: 0;
-    z-index: 2;
-  }
-</style>
+<Navigation class={className} {...rest} />
